--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,18 @@
     <h1>I [] pixels</h1>
     <!-- container for Vue instance, has access to our Vue code -->
     <div id="main">
+
+        <form>
+            <input v-model="title" type="text" name="title" placeholder="title">
+            <input v-model="description" type="text" name="description" placeholder="description">
+            <input v-model="username" type="text" name="username" placeholder="username">
+           
+            <input @change="handleChange" type="file" name="file" placeholder="image/*">
+
+            <button @click="handleClick">submit</button>
+            <!-- just convention to call it handleClick -->
+        </form>
+
         <!-- name from data in script.js -->
         <!-- <h2>Hi {{name}}! I can't wait to meet you :)</h2>
         <h2>2 * 2 = {{ 2 * 2 }}</h2>
