--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <input v-model="description" type="text" name="description" placeholder="description">
             <input v-model="username" type="text" name="username" placeholder="username">
            
-            <input @change="handleChange" type="file" name="file" placeholder="image/*">
+            <input @change="handleChange" type="file" name="file" accept="image/*">
 
             <button @click="handleClick">submit</button>
             <!-- just convention to call it handleClick -->
