result.rows of getImage in index.js not an empty array anymore

--- a/public/index.html
+++ b/public/index.html
@@ -60,9 +60,9 @@
         <div class="component">
             <h4 @click="closeModal">X</h4>
             <h1>This is my first template</h1>
-            <h2>Hello {{name}}.</h2>
-            <button @click="count++">DONT'T CLICK</button>
-            <h3>Count: {{count}}</h3>
+            <!-- <h2>Hello {{name}}.</h2> -->
+            <!-- <button @click="count++">DONT'T CLICK</button> -->
+            <!-- <h3>Count: {{count}}</h3> -->
         </div>
     </script>
 
