picture, title, description, username displayed in component

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,10 @@
         <div class="component">
             <h4 @click="closeModal">X</h4>
             <h1>This is my first template</h1>
+            <img :src="image.url" />
+            <p>{{image.title}}</p>
+            <p>{{image.description}}</p>
+            <p>{{image.username}}</p>
             <!-- <h2>Hello {{name}}.</h2> -->
             <!-- <button @click="count++">DONT'T CLICK</button> -->
             <!-- <h3>Count: {{count}}</h3> -->
