--- a/public/index.html
+++ b/public/index.html
@@ -48,19 +48,19 @@
     <script type="text/x-template" id="template">
         <div class="component">
             <h4 @click="closeModal">X</h4>
-            <h1>This is my first template</h1>
             <img :src="image.url" />
             <p>{{image.title}}</p>
             <p>{{image.description}}</p>
-            <p>{{image.username}}</p>
-            <p>{{image.created_at}}</p>
-
+            <p>Uploaded by {{image.username}} on {{image.created_at}}</p>
+            <h5>Add a Comment!</h5>
             <input v-model="comment" type="text" name="comment" placeholder="Your comment">
+            <input v-model="username" type="text" name="username" placeholder="Your username">
+
             <button @click="displayComment">COMMENT</button>
             <div
             class="comments"
             v-for="comment in comments"
-            v-if="comments.length">{{comment.comment}} and {{comment.created_at}}</div>
+            v-if="comments.length">{{comment.comment}} <br>{{comment.username}} on {{comment.created_at}}</div>
             </div>
     </script>
 
