--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,15 @@
     <h1>I [] pixels</h1>
     <!-- container for Vue instance, has access to our Vue code -->
     <div id="main">
-
         <form>
             <input v-model="title" type="text" name="title" placeholder="title">
             <input v-model="description" type="text" name="description" placeholder="description">
             <input v-model="username" type="text" name="username" placeholder="username">
            
             <input @change="handleChange" type="file" name="file" accept="image/*">
-
             <button @click="handleClick">submit</button>
             <!-- just convention to call it handleClick -->
         </form>
-
         <first-component 
             v-if="selectedImages" 
             post-title="hello" 
@@ -31,20 +28,16 @@
         <!-- Looping in Vue -->
         <h2>Latest Images</h2>
         <div class="box">
-            <!-- 1. removed @click="selectedImages = image.id"-->
-            <!-- 2. wrap image in anchor tag with a specific href value -->
             <div 
+                @click="selectedImages = image.id"
                 v-for="image in images" 
                 class="image"
                 v-if="images.length">
-                <a :href="'#' + image.id">
                 <img :src="image.url">
                 <label>{{image.title }}</label>
-                </a>
             </div>
         </div>
-        <button @click="showMore">MORE</button>
-
+        <button v-if="moreImg" @click="showMore">MORE</button>
         <!-- <first-component></first-component> -->
     </div>
 <!-- END OF MAIN -->
@@ -55,7 +48,7 @@
             <img :src="image.url" />
             <p>{{image.title}}</p>
             <p>{{image.description}}</p>
-            <p>Uploaded by {{image.username}} on {{image.created_at}}</p>
+              <p>Uploaded by {{image.username}} on {{image.created_at}}</p>
             <h5>Add a Comment!</h5>
             <input v-model="comment" type="text" name="comment" placeholder="Your comment">
             <input v-model="username" type="text" name="username" placeholder="Your username">
